# openalex-paper-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  watchlist.example.yaml
.github/workflows/: ci.yml  daily.yml
data/: state.json
scripts/: resolve_entities.py
src/openalex_paper_bot/: __init__.py  __main__.py  cli.py  config.py  formatter.py  models.py  openalex.py  runner.py  storage.py  summarizer.py  telegram.py
tests/: test_cli.py  test_config.py  test_formatter.py  test_openalex.py  test_runner.py  test_storage.py  test_summarizer.py  test_targets.py
