[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-paper-bot"
version = "0.1.0"
description = "Daily paper alerts using OpenAlex and Telegram."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "mypy>=1.12",
  "ruff>=0.15",
  "types-pyyaml>=6.0",
]

[project.scripts]
ppb = "openalex_paper_bot.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
follow_imports = "skip"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
